splitting files, added JSON sanitizer

--- a/dev_src/global_script.html
+++ b/dev_src/global_script.html
@@ -17,7 +17,31 @@ String.prototype.toHtmlEntities = function() {
 
 
 
-
+// pass expected list of properties and optional maxLen
+// returns obj or null
+function safeJSONParse(str, propArray, maxLen) {
+    var parsedObj, safeObj = {};
+    try {
+        if (maxLen && str.length > maxLen) {
+            return null;
+        } else {
+            parsedObj = JSON.parse(str);
+            if (typeof parsedObj !== "object" || Array.isArray(parsedObj)) {
+                safeObj = parseObj;
+            } else {
+                // copy only expected properties to the safeObj
+                propArray.forEach(function(prop) {
+                    if (parsedObj.hasOwnProperty(prop)) {
+                        safeObj[prop] = parseObj[prop];
+                    }
+                });
+            }
+            return safeObj;
+        }
+    } catch(e) {
+        return null;
+    }
+}
 
 
 
