--- a/dev_src/html_script.html
+++ b/dev_src/html_script.html
@@ -17,7 +17,7 @@ class ContextMenu {
 	async on_result(self) {
 		var data = false;
 		if (self.status == 200) {
-			data = JSON.parse(self.responseText);
+			data = safeJSONParse(self.responseText, ["head", "body", "script"], 5000);
 		}
 		popup_msg.close()
 		await tools.sleep(300)
