--- a/dev_src/global_script.html
+++ b/dev_src/global_script.html
@@ -27,12 +27,12 @@ function safeJSONParse(str, propArray, maxLen) {
         } else {
             parsedObj = JSON.parse(str);
             if (typeof parsedObj !== "object" || Array.isArray(parsedObj)) {
-                safeObj = parseObj;
+                safeObj = parsedObj;
             } else {
                 // copy only expected properties to the safeObj
                 propArray.forEach(function(prop) {
                     if (parsedObj.hasOwnProperty(prop)) {
-                        safeObj[prop] = parseObj[prop];
+                        safeObj[prop] = parsedObj[prop];
                     }
                 });
             }
@@ -40,6 +40,7 @@ function safeJSONParse(str, propArray, maxLen) {
         }
     } catch(e) {
         return null;
+        
     }
 }
 
@@ -331,15 +332,16 @@ transform: translate(-50%, -50%) scale(1)
 }
 
 .popup-box {
+/*Proxy, reinitialized in html_style.css*/
 display: block;
 /*display: inline;*/
 /*text-align: center;*/
 position: fixed;
 top: 50%;
 left: 50%;
-color: #BBB;
+color: #e9f4ff;
 transition: all 400ms ease-in-out;
-background: #222;
+background: #292929;
 width: 95%;
 max-width: 500px;
 z-index: 23;
@@ -429,10 +431,11 @@ opacity: 1;
 		popup_box.appendChild(close_btn)
 
 		this.header = createElement("h1")
+		this.header.style.marginBottom = "10px"
 		this.header.id = "popup-header-" + popup_id;
 		popup_box.appendChild(this.header)
 
-		this.hr = createElement("popup-hr-" + popup_id);
+		this.hr = createElement("hr");
 		this.hr.style.width = "95%"
 		popup_box.appendChild(this.hr)
 
@@ -576,7 +579,7 @@ var toaster = new Toaster()
 
 
 function r_u_sure({y=null_func, n=null, head="Head", body="Body", y_msg="Yes",n_msg ="No"}={}) {
-	popup_msg.close()
+	// popup_msg.close()
 	var box = createElement("div")
 	var msggg = createElement("p")
 	msggg.innerHTML = body; //"This can't be undone!!!"
@@ -590,7 +593,7 @@ function r_u_sure({y=null_func, n=null, head="Head", body="Body", y_msg="Yes",n_
 	var n_btn = createElement("div");
 	n_btn.innerText = n_msg;//"Cancel"
 	n_btn.className = "pagination center";
-	n_btn.onclick = () => {return (n==null) ? popup_msg.close() : n()};
+	n_btn.onclick = () => {return (n===null) ? popup_msg.close() : n()};
 	box.appendChild(y_btn);
 	box.appendChild(line_break());
 	box.appendChild(n_btn);
